--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <nav class="navigation">
                             <ul class="menu-list">
                                 <li class="menu-list-item">
-                                    <a href="#" class="menu-link">Home</a>
+                                    <a href="#" class="menu-link active">Home</a>
                                     <i class="bi bi-chevron-down"></i>
                                 </li>
                                 <li class="menu-list-item">
