--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <div class="header-row">
             <div class="container">
                 <div class="header-wrapper">
+                    <div class="header-mobile">
+                        <i class="bi bi-list"></i>
+                    </div>
                     <div class="header-left">
                         <a href="#">LOGO</a>
                     </div>
@@ -172,6 +175,7 @@
                                 </li>
                             </ul>
                         </nav>
+                        <i class="bi-x-circle"></i>
                     </div>
                     <div class="header-right">
                         <div class="header-right-links">
