--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>e-commerce</title>
     <!--! Boostrap Icons CDN  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <!--! header start  -->
