--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 </head>
 <body>
     <!--! header start  -->
-    <header>
+       <header>
         <div class="global-notification">
+           <div class="container">
             <p>
-                SUMMER SALE FOR ALL SWIM SUITS AND FREE EXPRESS INTERNATIONAL DELIVERY - OFF 50%! SHOP NOW
-                <a href="shop.html" >SHOP NOW</a>
-            </p>
+              SUMMER SALE FOR ALL SWIM SUITS AND FREE EXPRESS INTERNATIONAL DELIVERY - OFF 50%! SHOP NOW
+              <a href="shop.html" >SHOP NOW</a>
+          </p>
+           </div>
         </div>
         <div class="header-row">
             <div class="container">
@@ -242,7 +244,7 @@
     <!--! modal search end  -->
 
     <!--! slider start   -->
-  <section class="slider">
+     <section class="slider">
     <div class="slider-elements">
       <div class="slider-item">
         <div class="slider-image">
@@ -275,7 +277,56 @@
         </button>
       </div>
     </div>
-  </section>
+     </section>
   <!--! slider end   -->
+
+   <!--! categories start  -->
+   <section class="categories">
+    <div class="container">
+      <div class="section-title">
+        <h2>All Categories</h2>
+        <p>Summer Collection New Morden Design</p>
+      </div>
+      <ul class="category-list">
+        <li class="category-item">
+          <a href="#">
+            <img src="img/categories/categories1.png" alt="" class="category-image">
+            <span class="category-title">Smartphone</span>
+          </a>
+        </li>
+        <li class="category-item">
+          <a href="#">
+            <img src="img/categories/categories2.png" alt="" class="category-image">
+            <span class="category-title"> Watches </span>
+          </a>
+        </li>
+        <li class="category-item">
+          <a href="#">
+            <img src="img/categories/categories3.png" alt="" class="category-image">
+            <span class="category-title"> Electronics </span>
+          </a>
+        </li>
+        <li class="category-item">
+          <a href="#">
+            <img src="img/categories/categories4.png" alt="" class="category-image">
+            <span class="category-title"> Furnitures </span>
+          </a>
+        </li>
+        <li class="category-item">
+          <a href="#">
+            <img src="img/categories/categories5.png" alt="" class="category-image">
+            <span class="category-title"> Collections </span>
+          </a>
+        </li>
+        <li class="category-item">
+          <a href="#">
+            <img src="img/categories/categories6.png" alt="" class="category-image">
+            <span class="category-title"> Fashion </span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <!--! categories end  -->
 </body>
 </html>
