--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
       </div>
       <div class="slider-buttons">
         <button>
-          <i class="bi bi-checron-left"></i>
+          <i class="bi bi-chevron-left"></i>
         </button>
         <button>
-          <i class="bi bi-checron-right"></i>
+          <i class="bi bi-chevron-right"></i>
         </button>
       </div>
 
@@ -328,5 +328,66 @@
     </div>
   </section>
   <!--! categories end  -->
+
+   <!--! products start  -->
+   <section class="products">
+    <div class="container">
+      <div class="section-title">
+        <h2>Featured Products</h2>
+        <p>Summer Collection New Morden Design</p>
+      </div>
+      <div class="product-wrapper">
+        <ul class="product-list">
+          <li class="product-item">
+            <div class="product-image">
+              <a href="#">
+                <img src="img/products/product1/1.png" alt="">
+              </a>
+            </div>
+            <div class="product-info">
+              <a href="$" class="product-title">Analogue Resin Strap</a>
+              <ul class="product-star">
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-half"></i>
+                </li>
+              </ul>
+              <div class="product-prices">
+                <strong>$108.00</strong>
+                <span>$165</span>
+              </div>
+              <span class="product-discount">-17%</span>
+              <div class="product-links">
+                <button>
+                  <i class="bi bi-basket-fill"></i>
+                </button>
+                <button>
+                  <i class="bi bi-heart-fill"></i>
+                </button>
+                <a href="#">
+                  <i class="bi bi-eye-fill"></i> 
+                </a>
+                <a href="#">
+                  <i class="bi bi-share-fill"></i> 
+                </a>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <!-- !product end -->
 </body>
 </html>
