--- a/index.html
+++ b/index.html
@@ -1102,7 +1102,7 @@
       <div class="footer-copyright">
         <div class="site-copyright">
           <p>
-            Copyright 2022 © E-Commerce Theme. All right reserved. Powered by Emin Basbayan.
+            Copyright 2022 © E-Commerce Theme. All right reserved. Powered by Ecani VRL
           </p>
         </div>
         <a href="#">
