feat: added contact top html

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                         <i class="bi bi-list"></i>
                     </div>
                     <div class="header-left">
-                        <a href="#">LOGO</a>
+                        <a href="index.html" class="logo">LOGO</a>
                     </div>
                     <div class="header-center">
                         <nav class="navigation">
                             <ul class="menu-list">
                                 <li class="menu-list-item">
-                                    <a href="#" class="menu-link active">Home
+                                    <a href="index.html" class="menu-link active">Home
 
                                         <i class="bi bi-chevron-down"></i>
                                     </a>
@@ -168,12 +168,10 @@
                                       </div>
                                 </li>
                                 <li class="menu-list-item">
-                                    <a href="#" class="menu-link">Blog</a>
-                                    <i class="bi bi-chevron-down"></i>
+                                    <a href="blog.html" class="menu-link">Blog</a>
                                 </li>
                                 <li class="menu-list-item">
-                                    <a href="#" class="menu-link">Contact</a>
-                                    <i class="bi bi-chevron-down"></i>
+                                    <a href="contact.html" class="menu-link">Contact</a>
                                 </li>
                             </ul>
                         </nav>
@@ -790,7 +788,7 @@
     <section class="blogs">
     <div class="container">
       <div class="section-title">
-        <h2>New Arrivals</h2>
+        <h2>From Our Blog</h2>
         <p>Summer Collection New Morden Design</p>
       </div>
       <ul class="blog-list">
