feat: added shop page

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
               <nav class="navigation">
                 <ul class="menu-list">
                   <li class="menu-list-item">
-                    <a href="index.html" class="menu-link active"
+                    <a href="index.html" class="menu-link "
                       >Home
 
                       <i class="bi bi-chevron-down"></i>
@@ -75,7 +75,7 @@
                     </div>
                   </li>
                   <li class="menu-list-item megamenu-wrapper">
-                    <a href="#" class="menu-link"
+                    <a href="shop.html" class="menu-link"
                       >Shop
 
                       <i class="bi bi-chevron-down"></i>
@@ -179,7 +179,7 @@
                     <a href="blog.html" class="menu-link">Blog</a>
                   </li>
                   <li class="menu-list-item">
-                    <a href="contact.html" class="menu-link">Contact</a>
+                    <a href="contact.html" class="menu-link active">Contact</a>
                   </li>
                 </ul>
               </nav>
