--- a/account.html
+++ b/account.html
@@ -250,13 +250,13 @@
                 <form>
                     <div>
                         <label>
-                            <span>Username or email address *</span>
+                            <span>Username or email address <span class="required">*</span></span>
                             <input type="text">
                         </label>
                     </div>
                     <div>
                         <label>
-                            <span>Password *</span>
+                            <span>Password <span class="required">*</span></span>
                             <input type="password">
                         </label>
                     </div>
@@ -275,19 +275,19 @@
                 <form>
                     <div>
                         <label>
-                            <span>Username *</span>
+                            <span>Username <span class="required">*</span></span>
                             <input type="text">
                         </label>
                     </div>
                     <div>
                         <label>
-                            <span>Email address *</span>
+                            <span>Email address <span class="required">*</span></span>
                             <input type="email">
                         </label>
                     </div>
                     <div>
                         <label>
-                            <span>Password *</span>
+                            <span>Password <span class="required">*</span></span>
                             <input type="password">
                         </label>
                     </div>
@@ -298,7 +298,7 @@
                                 href="#">privacy policy.</a>
                         </p>
                     </div>
-                    <button class="btn btn-sm">Register</button>
+                    <button class="btn btn-sm btn-danger">Register</button>
                 </form>
             </div>
         </div>
