--- a/cart.html
+++ b/cart.html
@@ -246,7 +246,7 @@
     <section class="cart-page">
         <div class="container">
             <div class="cart-page-wrapper">
-                <div class="cart-form">
+                <form class="cart-form">
                     <div class="free-progress-bar">
                         <p class="progress-bar-title">
                             Add <strong>$161.00</strong> to cart and get free shipping!
@@ -255,12 +255,12 @@
                             <span class="progress"></span>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </section>
     <!--! cart end  -->
-    
+
  <!--! policy start  -->
  <section class="policy">
   <div class="container">
