--- a/cart.html
+++ b/cart.html
@@ -280,7 +280,7 @@
                                 <tr class="cart-item">
                                     <td></td>
                                     <td class="cart-image">
-                                        <img src="img/products/product1/1.png" alt="">
+                                        <img src="img/products/product2/1.png" alt="">
                                         <i class="bi bi-x delete-cart"></i>
                                     </td>
                                     <td>Analogue Resin Strap</td>
@@ -301,6 +301,47 @@
                         </div>
                     </div>
                 </form>
+                <div class="cart-collaterals">
+                    <div class="cart-totals">
+                        <h2>Cart totals
+                        </h2>
+                        <table>
+                            <tbody>
+                                <tr class="cart-subtotal">
+                                    <th>Subtotal</th>
+                                    <td>
+                                        <span id="subtotal">$316.00</span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Shipping</th>
+                                    <td>
+                                        <ul>
+                                            <li>
+                                                <label>
+                                                    Fast Cargo: $15.00
+                                                    <input type="checkbox">
+                                                </label>
+                                            </li>
+                                            <li>
+                                                <a href="#">Change Address</a>
+                                            </li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Total</th>
+                                    <td>
+                                        <strong>$316.00</strong>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div class="checkout">
+                            <button class="btn btn-lg">Proceed to checkout</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
