--- a/single-product.html
+++ b/single-product.html
@@ -288,7 +288,7 @@
                                     <li><i class="bi bi-star-fill"></i></li>
                                     <li><i class="bi bi-star-fill"></i></li>
                                     <li><i class="bi bi-star-fill"></i></li>
-                                    <li><i class="bi bi-star-fill"></i></li>
+                                    <li><i class="bi bi-star-half"></i></li>
                                 </ul>
                                 <span>2 reviews</span>
                             </div>
@@ -313,12 +313,17 @@
                                                 </label>
                                             </div>
                                             <div class="color-wrapper">
-                                                <label class="blue-color">
+                                                <label class="red-color">
+                                                    <input type="radio" name="product-color">
+                                                </label>
+                                            </div>
+                                            <div class="color-wrapper active">
+                                                <label class="green-color">
                                                     <input type="radio" name="product-color">
                                                 </label>
                                             </div>
                                             <div class="color-wrapper">
-                                                <label class="blue-color">
+                                                <label class="purple-color">
                                                     <input type="radio" name="product-color">
                                                 </label>
                                             </div>
@@ -329,7 +334,7 @@
                                             <span>Size</span>
                                         </div>
                                         <div class="values-list">
-                                            <span>XS</span>
+                                            <span class="active">XS</span>
                                             <span>S</span>
                                             <span>M</span>
                                             <span>L</span>
@@ -367,8 +372,9 @@
                                     <strong>Pants , Women</strong>
                                 </div>
                                 <div class="product-tags">
-                                    <span>Tags:</span>
-                                    <strong>black, white</strong>
+                                    <a href="#">black</a>
+                                    ,
+                                    <a href="#">white</a>
                                 </div>
                             </div>
                         </div>
