fix: refactoring product codes

--- a/single-product.html
+++ b/single-product.html
@@ -549,81 +549,81 @@
                     </li>
                   </ol>
                 </div>
-                  <!-- comment form start -->
-                  <div class="review-form-wrapper">
-                    <h2>Add a review</h2>
-                    <form class="comment-form">
-                        <p class="comment-notes">
-                            Your email address will not be published. Required fields are marked
-                            <span class="required">*</span>
-                        </p>
-                        <div class="comment-form-rating">
-                            <label>
-                                Your rating
-                                <span class="required">*</span>
-                            </label>
-                            <div class="stars">
-                                <a href="#" class="star">
-                                    <i class="bi bi-star-fill"></i>
-                                </a>
-                                <a href="#" class="star">
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                </a>
-                                <a href="#" class="star">
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                </a>
-                                <a href="#" class="star">
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                </a>
-                                <a href="#" class="star">
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="comment-form-comment">
-                            <label for="comment">
-                                Your review
-                                <span class="required">*</span>
-                            </label>
-                            <textarea id="comment" cols="50" rows="10"></textarea>
-                        </div>
-                        <div class="comment-form-author">
-                            <label for="name">
-                                Name
-                                <span class="required">*</span>
-                            </label>
-                            <input id="name" type="text">
-                        </div>
-                        <div class="comment-form-email">
-                            <label for="email">
-                                Email
-                                <span class="required">*</span>
-                            </label>
-                            <input id="email" type="email">
-                        </div>
-                        <div class="comment-form-cookies">
-                            <input id="cookies" type="checkbox">
-                            <label for="cookies">
-                                Save my name, email, and website in this browser for the next time I
-                                comment.
-                                <span class="required">*</span>
-                            </label>
-
-                        </div>
-                        <div class="form-submit">
-                            <input type="submit" class="btn submit">
-                        </div>
-                    </form>
+                <!-- comment form start -->
+                <div class="review-form-wrapper">
+                  <h2>Add a review</h2>
+                  <form class="comment-form">
+                    <p class="comment-notes">
+                      Your email address will not be published. Required fields
+                      are marked
+                      <span class="required">*</span>
+                    </p>
+                    <div class="comment-form-rating">
+                      <label>
+                        Your rating
+                        <span class="required">*</span>
+                      </label>
+                      <div class="stars">
+                        <a href="#" class="star">
+                          <i class="bi bi-star-fill"></i>
+                        </a>
+                        <a href="#" class="star">
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                        </a>
+                        <a href="#" class="star">
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                        </a>
+                        <a href="#" class="star">
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                        </a>
+                        <a href="#" class="star">
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                        </a>
+                      </div>
+                    </div>
+                    <div class="comment-form-comment form-comment">
+                      <label for="comment">
+                        Your review
+                        <span class="required">*</span>
+                      </label>
+                      <textarea id="comment" cols="50" rows="10"></textarea>
+                    </div>
+                    <div class="comment-form-author form-comment">
+                      <label for="name">
+                        Name
+                        <span class="required">*</span>
+                      </label>
+                      <input id="name" type="text" />
+                    </div>
+                    <div class="comment-form-email form-comment">
+                      <label for="email">
+                        Email
+                        <span class="required">*</span>
+                      </label>
+                      <input id="email" type="email" />
+                    </div>
+                    <div class="comment-form-cookies">
+                      <input id="cookies" type="checkbox" />
+                      <label for="cookies">
+                        Save my name, email, and website in this browser for the
+                        next time I comment.
+                        <span class="required">*</span>
+                      </label>
+                    </div>
+                    <div class="form-submit">
+                      <input type="submit" class="btn submit" />
+                    </div>
+                  </form>
                 </div>
                 <!-- comment form end -->
               </div>
@@ -634,6 +634,75 @@
       </div>
     </section>
     <!--! single product end  -->
+
+   
+    
+<!--! campaign single start  -->
+<section class="campaign-single">
+  <div class="container">
+    <div class="campaign-wrapper">
+      <h2>New Season Sale</h2>
+      <strong>40% OFF</strong>
+      <span></span>
+      <a href="#" class="btn btn-lg">
+        SHOP NOW
+        <i class="bi bi-arrow-right"></i>
+      </a>
+    </div>
+  </div>
+</section>
+<!--! campaign single end  -->
+
+      <!--! campaigns Start -->
+  <section class="campaigns">
+    <div class="container">
+      <div class="campaigns-wrapper">
+        <div class="campaign-item">
+          <h3 class="campaign-title">Fashion Month <br>
+            Ready in Capital <br>
+            Shop</h3>
+          <p class="campaign-desc">Lorem ipsum dolor sit amet consectetur adipiscing elit dolor</p>
+          <a href="#" class="btn btn-primary">
+            View All
+            <i class="bi bi-arrow-right"></i>
+          </a>
+        </div>
+        <div class="campaign-item">
+          <h3 class="campaign-title">Fashion Month <br>
+            Ready in Capital <br>
+            Shop</h3>
+          <p class="campaign-desc">Lorem ipsum dolor sit amet consectetur adipiscing elit dolor</p>
+          <a href="#" class="btn btn-primary">
+            View All
+            <i class="bi bi-arrow-right"></i>
+          </a>
+        </div>
+      </div>
+      <div class="campaigns-wrapper">
+        <div class="campaign-item">
+          <h3 class="campaign-title">Fashion Month <br>
+            Ready in Capital <br>
+            Shop</h3>
+          <p class="campaign-desc">Lorem ipsum dolor sit amet consectetur adipiscing elit dolor</p>
+          <a href="#" class="btn btn-primary">
+            View All
+            <i class="bi bi-arrow-right"></i>
+          </a>
+        </div>
+        <div class="campaign-item">
+          <h3 class="campaign-title">Fashion Month <br>
+            Ready in Capital <br>
+            Shop</h3>
+          <p class="campaign-desc">Lorem ipsum dolor sit amet consectetur adipiscing elit dolor</p>
+          <a href="#" class="btn btn-primary">
+            View All
+            <i class="bi bi-arrow-right"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--! campaigns end -->
 
     <!--! policy start  -->
     <section class="policy">
