--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
             <div class="container">
                 <div class="header-wrapper">
                     <div class="header-mobile">
-                        <i class="bi bi-list"></i>
+                        <i class="bi bi-list" id="btn-menu"></i>
                     </div>
                     <div class="header-left">
                         <a href="index.html" class="logo">LOGO</a>
                     </div>
-                    <div class="header-center">
+                    <div class="header-center"id="sidebar">
                         <nav class="navigation">
                             <ul class="menu-list">
                                 <li class="menu-list-item">
                                     <a href="index.html" class="menu-link active">Home
 
-                                        <i class="bi bi-chevron-down"></i>
+                                        <i class="bi bi-chevron-down" ></i>
                                     </a>
                                     <div class="menu-dropdown-wrapper">
                                         <ul class="menu-dropdown-content">
@@ -175,7 +175,7 @@
                                 </li>
                             </ul>
                         </nav>
-                        <i class="bi-x-circle"></i>
+                        <i class="bi-x-circle" id="close-sidebar"></i>
                     </div>
                     <div class="header-right">
                         <div class="header-right-links">
@@ -1124,5 +1124,7 @@
   </div>
 </footer>
 <!--! footer end  -->
+
+<script src="js/index.js"></script>
 </body>
 </html>
