feat: refactoring code

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
   <body>
     <!--! header start  -->
-    <div class="fixed">
+    <div class="">
       <header>
-        <div class="global-notification">
+        <div class="global-notification fixed">
           <div class="container">
             <p>
               SUMMER SALE FOR ALL SWIM SUITS AND FREE EXPRESS INTERNATIONAL
