--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 
   <body>
     <!--! header start  -->
-    <div class="">
       <header>
-        <div class="global-notification fixed">
+        <div class="global-notification">
           <div class="container">
             <p>
               SUMMER SALE FOR ALL SWIM SUITS AND FREE EXPRESS INTERNATIONAL
@@ -219,7 +218,6 @@
           </div>
         </div>
       </header>
-    </div>
     <!--! header end  -->
 
     <!--! modal search start  -->
